compiler/tests/invalid_programs/methods/missing_operator_overload.jm
!TypeError

class Foo
end

Foo() + 12
